NDN-IND (2021-01-14)
--------------------

Changes
* Forked from NDN-CPP commit 68d47319bb3bef21a9a0251209b684bc0440e053 . (This is
  a few commits after the tag for v0.17 with some internal changes.) The previous
  CHANGELOG is moved to CHANGELOG.archive .
* Updated NDN-CPP references to NDN-IND. Renamed include paths to <ndn-ind/...>. Renamed the
  libraries to libndn-ind.a, etc.
* Globally changed to use std::chrono::system_clock::time_point and std::chrono::nanoseconds
  instead of double MillisecondsSince1970 and Milliseconds.
* contrib/ndn-cxx: Put Scheduler, ScopedEventId, etc. in the ndn::scheduler namespace.
  Change to use std::chrono. Remove unneeded CustomClock and system_clock wrapper.
  Renamed the ndn::time::steady_clock wrapper (only needed for macOS) to
  ndn::scheduler::MonotonicSteadyClock.
* Add support for chacha20-Poly1305 in NAC. https://github.com/operantnetworks/ndn-ind/pull/7
* Add support for a group content key (GCK) and secured interest in NAC.
* In Interest, changed the MustBeFresh default value to false.
* Added Tlv0_3WireFormat.
* In Face, also check for a Unix socket at /var/tmp/nfd.sock .
* In KeyChain, remove obsolete security v1 API. https://github.com/operantnetworks/ndn-ind/issues/1
* Remove obsolete Name-based Access Control v1. (Keep v2.)
* PIB and TPM: Change system() to mkdir() or create_directories(). https://github.com/operantnetworks/ndn-ind/pull/15
* In Transport, added readRawPackets to handle raw packets. https://github.com/operantnetworks/ndn-ind/pull/16
* In examples and unit tests, use the default Face which doesn't require TCP.
* Move the instructions for RHEL 7 to the wiki.
* Add support for Visual Studio. https://github.com/operantnetworks/ndn-ind/pull/17
* In examples, add optional command-line arguments. https://github.com/operantnetworks/ndn-ind/pull/18
* In examples, add cert-install .

Bug fixes
* In expressInterest, use the nonce in the Interest if provided.